this fix removes body hidden overflow as it broke the mobile app

--- a/style.css
+++ b/style.css
@@ -367,10 +367,7 @@ text-decoration: none;
 /* For Screen Sizes 300px-728px */
 
 @media screen and (min-width: 300px) and (max-width: 728px){
-    body {
-        overflow: hidden!important;
-    }
-    /* Header CSS */
+      /* Header CSS */
 header{
     background: var(--header-background-color);
     padding: 10px;
@@ -460,7 +457,7 @@ header{
     height: 400px;
     border-radius: 50%;
     position : absolute;
-    overflow:hidden;
+    overflow : hidden;
     transform: scale(0.8);
   }
 
